# MultiMetric-Eval

./: .pypirc  README.md  README_zh.md  evaluator.py  pair_data.py  prepare_data.py  pyproject.toml  verify_latency.py
examples/bash/: install_extras.sh  run_latency_cli.sh
examples/python/: emotion_eval.py  latency_eval.py  paralinguistic_eval.py  paralinguistic_identity_baseline.py  speaker_similarity_eval.py  speech_quality_eval.py  translation_eval.py
src/multimetric_eval/: __init__.py  _beats_official.py  dataset.py  emotion_evaluator.py  evaluator.py  paralinguistic_evaluator.py  speaker_similarity_evaluator.py  speech_evaluator.py  testtranslation.py  translation_evaluator.py
src/multimetric_eval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/multimetric_eval/latency/: agent.py  cli.py  instance.py  metrics.py  utils.py
src/multimetriceval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
