[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multimetriceval"
version = "0.4.4"
description = "多指标评测工具: 支持翻译 (sacreBLEU/COMET/BLEURT/chrF++)，延迟（ATD,StartOffset）与 语音 (UTMOS/WER)"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Yanjie An", email = "691476922@qq.com"}
]
keywords = [
    "translation", "evaluation", "BLEU", "COMET", "BLEURT", "NLP", 
    "ASR", "speech-synthesis", "voice-conversion", "UTMOS", "WER"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch>=1.9.0",
    "torchaudio>=0.9.0", 
    "numpy",
    "sacrebleu>=2.0.0",
    "pandas",
    "jiwer",
    "tqdm",
    "scipy",
    "soundfile",
    "textgrid" 
]

[project.urls]
"Homepage" = "https://github.com/sjtuayj/MultiMetric-Eval"
"Bug Tracker" = "https://github.com/sjtuayj/MultiMetric-Eval/issues"
"Documentation" = "https://github.com/sjtuayj/MultiMetric-Eval#readme"

[project.optional-dependencies]
comet = ["unbabel-comet>=2.2.2"]
whisper = ["openai-whisper"]
viz = ["matplotlib"]

speech_full = ["openai-whisper"]
all = ["unbabel-comet>=2.2.2", "openai-whisper","matplotlib"]

[tool.setuptools.packages.find]
where = ["src"]